EXCEPTION_ACCESS_VIOLATION in compiled by C1 String.valueOf method

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • hs25
    • Affects Version/s: hs25
    • Component/s: hotspot
    • b55

        Minidump presences.

        # EXCEPTION_ACCESS_VIOLATION (0xc0000005) at pc=0x01c9a770, pid=5256, tid=1072
        #
        # JRE version: Java(TM) SE Runtime Environment (8.0-b108) (build 1.8.0-ea-b108)
        # Java VM: Java HotSpot(TM) Server VM (25.0-b50 compiled mode windows-x86 )
        # Problematic frame:
        # J 2612 C1 java.lang.String.valueOf(Ljava/lang/Object;)Ljava/lang/String; (14 bytes) @ 0x01c9a770 [0x01c9a760+0x10]
        .........
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        J 2612 C1 java.lang.String.valueOf(Ljava/lang/Object;)Ljava/lang/String; (14 bytes) @ 0x01c9a770 [0x01c9a760+0x10]
        j java.io.PrintWriter.println(Ljava/lang/Object;)V+1
        J 2609 C1 java.lang.Throwable$WrappedPrintWriter.println(Ljava/lang/Object;)V (9 bytes) @ 0x01bb9cc8 [0x01bb9c60+0x68]
        J 2591 C1 java.lang.Throwable.printStackTrace(Ljava/lang/Throwable$PrintStreamOrWriter;)V (177 bytes) @ 0x01c71164 [0x01c70da0+0x3c4]
        J 2587 C1 java.lang.Throwable.printStackTrace(Ljava/io/PrintWriter;)V (13 bytes) @ 0x01ba1810 [0x01ba1780+0x90]
        J 2547% C2 nsk.share.gc.gp.GarbageUtils.eatMemory(Lnsk/share/test/ExecutionController;Lnsk/share/gc/gp/GarbageProducer;JJJLnsk/share/gc/gp/GarbageUtils$OOM_TYPE;)I (376 bytes) @ 0x01d99fdc [0x01d999c0+0x61c]
        J 2234 C1 metaspace.flags.maxMetaspaceSize.maxMetaspaceSize.run()V (81 bytes) @ 0x01cfaab4 [0x01cfa8c0+0x1f4]
        J 2232 C1 nsk.share.test.Tests$TestRunner.execute(Ljava/lang/Object;)V (106 bytes) @ 0x01bde7c0 [0x01bde2a0+0x520]
        J 2122 C1 nsk.share.test.Tests$TestRunner.run()V (17 bytes) @ 0x01cd9cc0 [0x01cd9be0+0xe0]
        J 2117 C1 nsk.share.gc.GC.runTest(Lnsk/share/test/Test;[Ljava/lang/String;)V (13 bytes) @ 0x01cda344 [0x01cda280+0xc4]
        J 2115 C1 metaspace.flags.maxMetaspaceSize.maxMetaspaceSize.main([Ljava/lang/String;)V (12 bytes) @ 0x01cda72c [0x01cda600+0x12c]
        v ~StubRoutines::call_stub
        V [jvm.dll+0x1539c5] JavaCalls::call_helper+0x1d5;; ?call_helper@JavaCalls@@CAXPAVJavaValue@@PAVmethodHandle@@PAVJavaCallArguments@@PAVThread@@@Z+0x1d5
        V [jvm.dll+0x221f5e] os::os_exception_wrapper+0x6e;; ?os_exception_wrapper@os@@SAXP6AXPAVJavaValue@@PAVmethodHandle@@PAVJavaCallArguments@@PAVThread@@@Z0123@Z+0x6e
        V [jvm.dll+0x153a5e] JavaCalls::call+0x1e;; ?call@JavaCalls@@SAXPAVJavaValue@@VmethodHandle@@PAVJavaCallArguments@@PAVThread@@@Z+0x1e
        V [jvm.dll+0xd8397] jni_invoke_static+0x167;; ?jni_invoke_static@@YAXPAUJNIEnv_@@PAVJavaValue@@PAV_jobject@@W4JNICallType@@PAU_jmethodID@@PAVJNI_ArgumentPusher@@PAVThread@@@Z+0x167
        V [jvm.dll+0xe096f] jni_CallStaticVoidMethod+0x9f;; _jni_CallStaticVoidMethod+0x9f

        RULE metaspace/flags/maxMetaspaceSize Crash EXCEPTION_ACCESS_VIOLATION

              Assignee:
              Christian Thalinger (Inactive)
              Reporter:
              Aleksey Timofeev (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: