8025566: EXCEPTION_ACCESS_VIOLATION in compiled by C1 String.valueOf method

Reviewed-by: kvn